frontend/test/should_pass/pattern_003.grg
pattern Foo
{
	x: Node;
}

rule r
{
	foo:Foo();

	replace
	{
		foo;
	}
}