frontend/test/should_fail/basic_014.grg
rule r(x:Node) {
  negative {
    x:Node;
  }
  replace {
  }
}
